# ai-voc-analysis

./: .gitignore  pyproject.toml
app/: __init__.py  config.py  domain_registry.py  domains.yaml  llm_factory.py  main.py  state.py
app/graph/: nodes.py  schemas.py  workflow.py
app/tools/: __init__.py  splunk_search.py
doc/: architecture.md  retrospective.md
